Fixed issue with horizontal scrolling.

--- a/_assets/css/app.scss
+++ b/_assets/css/app.scss
@@ -124,3 +124,12 @@ body {
 #charity {
   margin-bottom: 0.5em;
 }
+
+#sponsors {
+  .container {
+    .row {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+}
